wikijs/depl_wikijs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wikijs
  name: wikijs
  namespace: wikijs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wikijs 
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: requarks/wiki:2
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
          - mountPath: /opt/wikijs
            name: wikijs-stg
      volumes:
        - name: wikijs-stg
          persistentVolumeClaim: 
            claimName: wikijs-pvc
