wikijs/stateful_set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: wikijs
  labels:
    app: postgres
spec: 
  serviceName: postgres
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template: 
    metadata:
      labels: 
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgredb
      volumes: 
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pvc
