wikijs/svc_postgresdb.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: wikijs
spec: 
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
